--- a/stylesheets/sass/modules/_media-queries.scss
+++ b/stylesheets/sass/modules/_media-queries.scss
@@ -60,3 +60,9 @@ $desktopW: 1440px;
     @content;
   }
 }
+
+@mixin portrait {
+  @media (orientation: portrait) {
+    @content;
+  }
+}
